Added some basic image loading
Made thumbnails work when clicked on and added algorithm to calculate
the width of the thumbnail list

--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
 <body>
 	<div id="gallery">
 		<div class="featureHolder">
-			<img src="holder.js/640x480/#333:#fff/text:Image1" id="featuredImg" alt="">
+			<img src="images/gallery/full1.jpg" id="featuredImg" alt="">
 		</div>
 		<div class="galleryThumbs">
 			<ul id="galleryThumbs">
-				<li><img src="holder.js/100x75/#333:#fff/text:Image1" class="galleryThumb active" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image2" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image3" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image4" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image5" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image6" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image7" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image8" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image9" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
-				<li><img src="holder.js/100x75/#333:#fff/text:Image10" data-bigimg="holder.js/640x480/#333:#fff/text:Full Image" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full1.jpg"><img src="images/gallery/thumb1.jpg" class="galleryThumb active" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full2.jpg"><img src="images/gallery/thumb2.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full3.jpg"><img src="images/gallery/thumb3.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full4.jpg"><img src="images/gallery/thumb4.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full5.jpg"><img src="images/gallery/thumb5.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full6.jpg"><img src="images/gallery/thumb6.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full1.jpg"><img src="images/gallery/thumb1.jpg" class="galleryThumb " alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full2.jpg"><img src="images/gallery/thumb2.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full3.jpg"><img src="images/gallery/thumb3.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full4.jpg"><img src="images/gallery/thumb4.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full5.jpg"><img src="images/gallery/thumb5.jpg" class="galleryThumb" alt=""></li>
+				<li class="thumb" height="75" width="100" data-image="images/gallery/full6.jpg"><img src="images/gallery/thumb6.jpg" class="galleryThumb" alt=""></li>
 			</ul>
 		</div>
 	</div>
